# DirWalker

./: .prettierignore  .prettierrc  LICENSE  README-jp.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  vite.config.js
.github/workflows/: all-build-debug.yml  all-build-release.yml  apple-arm-build-debug.yml  apple-arm-build-release.yml  auto-build.yml  auto-release.yml  deploy-pages.yml  publish-to-auto-release.yml  publish-to-manual-release.yml  test-build-only.yml  ubuntu-arm-build-debug.yml  ubuntu-arm-build-release.yml  windows-build-debug.yml  windows-build-release.yml
src/: App.vue  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: dir_walker.rs  dust.rs  frontend_utils.rs  init_walk.rs  lib.rs  main.rs  node.rs  progress.rs  utils.rs  walk_manager.rs
src/components/: Abort.vue  BreadcrumbsList.vue  DirectoryFileList.vue  GenerateSunburst.js  Navbar.vue  NodeReload.vue  ProgressView.vue  ShowContextMenu.js  SunburstChart.vue  ViewBreadcrumbsList.vue  ViewDirectoryFileList.vue  ViewHeader.vue  ViewHeaderSettings.vue  ViewSunburstChart.vue  WalkStart.vue  detectOS.js  i18n.js  util.js
src/components/dialog/: Settings.vue  SettingsAbout.vue  SettingsGeneral.vue  SettingsLanguage.vue  SettingsPermissions.vue  ViewSettings.vue  ViewSettingsAbout.vue  ViewSettingsGeneral.vue  ViewSettingsLanguage.vue  ViewSettingsPermissions.vue
src/components/i18n/: en.json  ja.json
src/i18n/: en.json  ja.json
src/lib/: detectOS.js  i18n.js  util.js
