[package]
name = "dir_walker"
version = "0.1.5"
description = "Tools to visualize directory usage"
authors = ["Shogo Fukushima"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "^1.6.7", features = [ "dialog-ask", "shell-execute", "shell-open", "clipboard-write-text", "dialog-message", "dialog-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
sysinfo = "0.27"
regex = "1"
tauri-plugin-context-menu = "0.7.1"
opener = "0.7.1"
winapi-util = "0.1.8"
filesize = "0.2.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
