[package]
name = "dir_walker"
version = "0.2.1"
description = "Tools to visualize directory usage"
authors = ["Shogo Fukushima"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
sysinfo = "0.27"
regex = "1"
winapi-util = "0.1.8"
filesize = "0.2.0"
tauri-plugin-dialog = "2.2"
tauri-plugin-shell = "2.2"
tauri-plugin-clipboard-manager = "2.2"
tauri-plugin-opener = "2.2"
opener = "0.7.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
